feat: add swagger docs api and add graphql endpoint to consume api
